Add extra screenshots and mailto contact fallback

--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
           <a class="link" href="#">Live →</a>
         </article>
         <article class="card">
+          <img src="images/project2.svg" alt="Project Two screenshot" class="screenshot">
           <h4>Project Two</h4>
           <p>Short description of project two. Tech: React, Node.</p>
           <a class="link" href="#">Repo →</a>
         </article>
         <article class="card">
+          <img src="images/project3.svg" alt="Project Three screenshot" class="screenshot">
           <h4>Project Three</h4>
           <p>Short description of project three. Tech: Python, Flask.</p>
           <a class="link" href="#">Details →</a>
